--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div class=wrapper>
-							<svg width="720" height="450" xmlns="http://www.w3.org/2000/svg">
+						<img src="images/logo-1024x.png">
+						<div class=wrapper>	
+							<svg id="svgElement"  width="720" height="450" >
 								<g>
 								 <title>Layer 1</title>
 								 <path id="svg_5" d="m148.57041,182.85623c0,0 -23.21424,44.64277 -22.8571,44.64277c0.35714,0 169.64254,-0.71428 169.28613,-1.07086c0.35642,0.35658 28.92779,-43.92906 28.57137,-44.28563c0.35642,0.35657 -175.0004,0.71372 -175.0004,0.71372z" opacity="NaN" stroke="#000" fill="#fff"/>
