--- a/404.html
+++ b/404.html
@@ -1,28 +1,70 @@
-<!DOCTYPE html>
-<html lang="ch-tw">
-<head>
-    <title>EnCreation</title>
-    <meta charset="utf-8"/>
-    <meta name="description" content="EnCreation工作室。目前正在廣泛徵才中!!"/>
-    <meta property="og:type" content="article"/>
-    <meta property="og:title" content="EnCreation Studio"/>
-    <meta property="og:description" content="Minecraft地圖創作工作室"/>
-    <meta property="og:url" content="https://www.encreation.ga/"/>
-    <meta property="og:site_name" content="EnCreation Studio."/>
-    <link rel="stylesheet" href="index.css">
-    <link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
-    <link rel="canonical" href="https://www.encreation.ga"/>  
-</head>
-    <body>
-        <div class="logo-top">
-            <a href="index.html" traget="_top">EnCreation</a>
-        </div>
-        <div class="page404">
-            <h1>404</h1>
-            <h3>你所查找的頁面已刪除或不存在</h3>   
-        </div>
-        <div class="copyright">
-            &copy;2022<a href="index.html" traget="_top">EnCreation Studio.</a>
-        </div>
-    </body>
-</html>
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>EnCreation</title>
+		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
+		<meta charset="utf-8"/>
+		<meta name="description" content="EnCreation Studio"/>
+		<meta property="og:type" content="article"/>
+		<meta property="og:title" content="EnCreation Studio"/>
+		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
+		<meta property="og:url" content="https://www.encreation.ga/"/>
+		<meta property="og:site_name" content="EnCreation Studio."/>
+		<link rel="stylesheet" href="index.css">
+		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
+		<link rel="canonical" href="https://www.encreation.ga"/>  
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="landing is-preload">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">EnCreation</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">首頁</a></li>
+											<li><a href="#">地圖作品</a></li>
+											<li><a href="#">關於我們</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+                        <h1  style="font-size: 180px;">404</h1>
+                        <h1  style="font-size: 30px;">你所查找的網頁已刪除或不存在</h1>   
+						<div class="inner">
+							<h2>EnCreaion Studio</h2>
+							<p>Minecraft 地圖製作工作室<br />
+							</p>
+						</div>
+				
+            </div>
+    		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+        </body>
