--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<img src="images/logo-1024x.png">
+						<img src="images/logo-w1024x.png">
 						<div class=wrapper>	
 							<svg id="svgElement"  width="720" height="450" >
 								<g>
