--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
 		<meta property="og:url" content="https://www.encreation.ga/"/>
 		<meta property="og:site_name" content="EnCreation Studio."/>
-		<link rel="stylesheet" href="index.css">
 		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
 		<link rel="canonical" href="https://www.encreation.ga"/>  
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -63,7 +61,7 @@
 							</svg>
 						</div> 
 						<div class="inner">
-							<h2>EnCreaion Studio</h2>
+							<h2>EnCreation Studio</h2>
 							<p>Minecraft 地圖製作工作室<br />
 							</p>
 							<ul class="actions special">
@@ -116,14 +114,16 @@
 								<!-- <p><li>text</li></p> -->
 							</div>
 						</section>
+						<a href="maps/Plaguestorm.html">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>
 									最新地圖 - 目前尚無</h2>
-									<!-- <p><li>地圖「瘟疫風暴」地圖優化中，目前製作工期3個月，預計今年暑假正式發布</li></p> -->
+									<h3>地圖「瘟疫風暴」地圖優化中，目前製作工期3個月，預計今年發布</h3>
 									<p>Minecraft地圖製作中...</br>敬請期待</p>
 									
 						</section>
+						</a>
 					</section>
 
 				<!-- Three -->
@@ -191,7 +191,7 @@
 							<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; <a href="index.html">2022 EnCreaion</a></li>
+							<li>&copy; <a href="index.html">2022 EnCreation</a></li>
 						</ul>
 					</footer>
 
