--- a/maps.html
+++ b/maps.html
@@ -6,8 +6,18 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
-		<meta charset="utf-8" />
+		<title>EnCreation</title>
+		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
+		<meta charset="utf-8"/>
+		<meta name="description" content="EnCreation Studio"/>
+		<meta property="og:type" content="article"/>
+		<meta property="og:title" content="EnCreation Studio"/>
+		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
+		<meta property="og:url" content="https://www.encreation.ga/"/>
+		<meta property="og:site_name" content="EnCreation Studio."/>
+		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
+		<link rel="canonical" href="https://www.encreation.ga"/>  
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -19,18 +29,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">EnCreation</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="mapportfolio.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="index.html">首頁</a></li>
+											<li><a href="#">地圖作品</a></li>
+											<li><a href="#">關於我們</a></li>
 										</ul>
 									</div>
 								</li>
@@ -64,19 +72,18 @@
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
+				<footer id="footer">
+					<ul class="icons">
+						
+						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:encreat2022@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; <a href="index.html">2022 EnCreation</a></li>
+					</ul>
+				</footer>
 			</div>
 
 		<!-- Scripts -->
