--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">首頁</a></li>
-											<li><a href="#">地圖作品</a></li>
-											<li><a href="#">關於我們</a></li>
+											<li><a href="https://encreation.ga/">首頁</a></li>
+											<li><a href="https://encreation.ga/maps">地圖作品</a></li>
+											<li><a href="https://encreation.ga/about">關於我們</a></li>
 										</ul>
 									</div>
 								</li>
@@ -65,7 +65,7 @@
 							<p>Minecraft 地圖製作工作室<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">地圖作品</a></li>
+								<li><a href="https://encreation.ga/maps" class="button primary">地圖作品</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">了解更多</a>
@@ -81,7 +81,7 @@
 								   同時也感到孤單的我們集結創辦 「EnCreation Studio」<br />
 								   在遇到地圖製作問題時可互相幫助，彼此互相監督，提供完整的地圖品質。<br />
 								   若有一技之長的你或是和我們遇到一樣的問題，歡迎加入我們。
-								   <div><a href="#" class="button fit">關於我們</a></div>
+								   <div><a href="https://encreation.ga/about" class="button fit">關於我們</a></div>
 								</p>
 							</header>
 							<ul class="icons major">
@@ -175,8 +175,8 @@
 								</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">地圖作品</a></li>
-								<li><a href="#" class="button fit">關於我們</a></li>
+								<li><a href="https://encreation.ga/maps" class="button fit primary">地圖作品</a></li>
+								<li><a href="https://encreation.ga/about" class="button fit">關於我們</a></li>
 							</ul>
 						</div>
 					</section>
@@ -191,7 +191,7 @@
 							<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; <a href="index.html">2022 EnCreation</a></li>
+							<li>&copy; <a href="https://encreation.ga/">2022 EnCreation</a></li>
 						</ul>
 					</footer>
 
