--- a/maps/Plaguestorm.html
+++ b/maps/Plaguestorm.html
@@ -8,7 +8,7 @@
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="瘟疫風暴"/>
 		<meta property="og:description" content="-不對稱陣營對抗 -PVP射擊遊戲"/>
-		<meta property="og:url" content="https://www.encreation.ga/maps/Plaguestorm.html"/>
+		<meta property="og:url" content="https://www.encreation.ga/maps/Plaguestorm"/>
 		<meta property="og:site_name" content="EnCreation Studio."/>
 		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
 		<link rel="canonical" href="https://www.encreation.ga"/>  
@@ -337,7 +337,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy;2022<a href="../index.html">EnCreaion</a>.</p>
+						<p class="copyright">&copy;2022<a href="https://encreation.ga/">EnCreaion</a>.</p>
 					</footer>
 
 			</div>
