--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
 		<meta charset="utf-8"/>
 		<meta name="description" content="EnCreation Studio"/>
 		<meta property="og:type" content="article"/>
-		<meta property="og:title" content="EnCreation Studio"/>
-		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
-		<meta property="og:url" content="https://www.encreation.ga/"/>
+		<meta property="og:title" content="關於我們"/>
+		<meta property="og:description" content="Minecraft 地圖製作工作室"/>
+		<meta property="og:url" content="https://www.encreation.ga/about"/>
 		<meta property="og:site_name" content="EnCreation Studio."/>
 		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
 		<link rel="canonical" href="https://www.encreation.ga"/>  
@@ -29,16 +29,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">EnCreation</a></h1>
+						<h1><a href="https://encreation.ga">EnCreation</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">首頁</a></li>
-											<li><a href="#">地圖作品</a></li>
-											<li><a href="#">關於我們</a></li>
+											<li><a href="https://encreation.ga">首頁</a></li>
+											<li><a href="https://encreation.ga/maps">地圖作品</a></li>
+											<li><a href="https://encreation.ga/about">關於我們</a></li>
 										</ul>
 									</div>
 								</li>
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Image</h4>
 									<h5>Fit</h5>
 									<div class="box alt">
-										<div class="row gtr-50 gtr-uniform">
+											<div class="row gtr-50 gtr-uniform">
 											<div class="col-12"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
@@ -374,7 +374,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; <a href="index.html">2022 EnCreation</a></li>
+				<li>&copy; <a href="https://encreation.ga">2022 EnCreation</a></li>
 			</ul>
 		</footer>
 
