--- a/404.html
+++ b/404.html
@@ -15,14 +15,13 @@
 		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
 		<meta property="og:url" content="https://www.encreation.ga/"/>
 		<meta property="og:site_name" content="EnCreation Studio."/>
-		<link rel="stylesheet" href="index.css">
 		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
 		<link rel="canonical" href="https://www.encreation.ga"/>  
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://encreation.ga/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="https://encreation.ga/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
 
@@ -31,16 +30,16 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">EnCreation</a></h1>
+						<h1><a href="https://encreation.ga">EnCreation</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">首頁</a></li>
-											<li><a href="#">地圖作品</a></li>
-											<li><a href="#">關於我們</a></li>
+											<li><a href="https://encreation.ga">首頁</a></li>
+											<li><a href="https://encreation.ga/maps">地圖作品</a></li>
+											<li><a href="https://encreation.ga/about">關於我們</a></li>
 										</ul>
 									</div>
 								</li>
@@ -66,17 +65,17 @@
 							<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; <a href="index.html">2022 EnCreation</a></li>
+							<li>&copy; <a href="https://encreation.ga/">2022 EnCreation</a></li>
 						</ul>
 					</footer>
 				
             </div>
     		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="https://encreation.ga/assets/js/jquery.min.js"></script>
+			<script src="https://encreation.ga/assets/js/jquery.scrollex.min.js"></script>
+			<script src="https://encreation.ga/assets/js/jquery.scrolly.min.js"></script>
+			<script src="https://encreation.ga/assets/js/browser.min.js"></script>
+			<script src="https://encreation.ga/assets/js/breakpoints.min.js"></script>
+			<script src="https://encreation.ga/assets/js/util.js"></script>
+			<script src="https://encreation.ga/assets/js/main.js"></script>
         </body>
