--- a/404.html
+++ b/404.html
@@ -1,15 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>EnCreation</title>
 		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
 		<meta charset="utf-8"/>
 		<meta name="description" content="EnCreation Studio"/>
+		<meta property="og:image" content="https://encreation.ga/images/logo-w1024x.png"/>
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="EnCreation Studio"/>
 		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
@@ -58,7 +55,7 @@
 						</div>
 					<footer id="footer">
 						<ul class="icons">
-							
+							<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:encreat2022@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
