--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
 		<meta charset="utf-8"/>
 		<meta name="description" content="EnCreation Studio"/>
+		<meta property="og:image" content="https://encreation.ga/images/logo-w1024x.png"/>
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="EnCreation Studio"/>
 		<meta property="og:description" content="Minecraft 地圖創作工作室"/>
@@ -114,7 +115,7 @@
 								<!-- <p><li>text</li></p> -->
 							</div>
 						</section>
-						<a href="maps/Plaguestorm.html">
+						<a href="maps/Plaguestorm" target="_blank">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>
@@ -160,7 +161,7 @@
 									</p>
 								</li>
 								<span><span><h2>加入我們吧!</br></h2>
-								<a href="#" class="button primary">招募表單</a>
+								<a href="https://forms.gle/UYLicA2dn96RRv2Q7" class="button primary">招募表單</a>
 							</ul>
 						</div>
 					</section>
@@ -184,7 +185,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							
+
+							<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:encreat2022@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
