--- a/maps/Plaguestorm.html
+++ b/maps/Plaguestorm.html
@@ -78,7 +78,7 @@
 									<ul class="actions">
 										
 										<span>
-										<li><a href="#" class="button primary">回報表單</a></li>
+										<li><a href="https://forms.gle/W3JaoXUadcz4sPws8" target="_blank" class="button primary">回報表單</a></li>
 										<br>
 										<h3 >填寫表單或是透過下方的聯絡方式告知我們</h3>
 									</ul>
