--- a/elements.html
+++ b/elements.html
@@ -367,7 +367,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				
+				<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="mailto:encreat2022@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
