--- a/maps.html
+++ b/maps.html
@@ -39,6 +39,7 @@
 										<ul>
 											<li><a href="https://encreation.ga/">首頁</a></li>
 											<li><a href="https://encreation.ga/maps">地圖作品</a></li>
+											<li><a href="https://encreation.ga/maps/Plaguestorm" target="_blank">地圖 - 瘟疫風暴</a></li>
 											<li><a href="https://encreation.ga/about">關於我們</a></li>
 										</ul>
 									</div>
