--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>EnCreation</title>
 		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
 		<meta charset="utf-8"/>
-		<meta name="description" content="EnCreation Studio"/>
+		<meta name="description" content="EnCreation Studio，我們是一群為製作優良地圖集結的夥伴，互相合作只為台灣地圖圈提供優質的體驗，目前正製作全新地圖中，歡迎提供點子或是加入我們!"/>
 		<meta property="og:image" content="https://encreation.ga/images/logo-w1024x.png"/>
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="EnCreation Studio"/>
