--- a/maps.html
+++ b/maps.html
@@ -9,7 +9,7 @@
 		<title>EnCreation</title>
 		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
 		<meta charset="utf-8"/>
-		<meta name="description" content="EnCreation Studio"/>
+		<meta name="description" content="EnCreation Studio Minecraft地圖製作工作室"/>
 		<meta property="og:image" content="https://encreation.ga/images/logo-w1024x.png"/>
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="EnCreation地圖作品"/>
