--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-94GP07P5BL"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-94GP07P5BL');
+		</script>
 		<title>EnCreation</title>
 		<link rel="icon" href="images/logo-1024x.png" type="image/png"/ >
 		<meta charset="utf-8"/>
