--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 					<footer id="footer">
 						<ul class="icons">
 
-							<li><a href="#" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UClthqvEIHzj4Mx0k0nKClug" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="https://www.facebook.com/EnCreation-Studio-105640908818430/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/encreation_studio/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:encreat2022@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://discord.gg/2qypabBQnf"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 						</ul>
