--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
-		<!-- Messenger 洽談外掛程式 Code -->
+				<!-- Messenger 洽談外掛程式 Code -->
     <div id="fb-root"></div>
 
     <!-- Your 洽談外掛程式 code -->
@@ -111,7 +111,7 @@
 						<a href="#one" class="more scrolly">了解更多</a>
 					</section>
 
-				<!-- One -->
+				<!-- One --
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
