--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<a href="#one" class="more scrolly">了解更多</a>
 					</section>
 
-				<!-- One --
+				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
