--- a/maps/Plaguestorm.html
+++ b/maps/Plaguestorm.html
@@ -337,6 +337,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://www.youtube.com/channel/UClthqvEIHzj4Mx0k0nKClug" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="https://www.facebook.com/EnCreation-Studio-105640908818430/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/encreation_studio/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto:encreat2022@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://discord.gg/BYMWwF2pKZ" target="_blank"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
+						</ul>
 						<p class="copyright">&copy;2022<a href="https://encreation.ga/">EnCreaion</a>.</p>
 					</footer>
 
