--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 							<li><a href="https://www.facebook.com/EnCreation-Studio-105640908818430/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/encreation_studio/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:encreat2022@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="https://discord.gg/BYMWwF2pKZ" target="_blank"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>scord</span></a></li>
+							<li><a href="https://discord.gg/BYMWwF2pKZ" target="_blank"  class="icon brands fa-discord" traget="_blank"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; <a href="https://encreation.ga/">2022 EnCreation</a></li>
