--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<link rel="alternate" href="https://www.encreation.ga" hreflang="ch-tw" />
 		<link rel="canonical" href="https://www.encreation.ga"/>  
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta name="facebook-domain-verification" content="1rqcz5y0wztvrrf9hy48f3vh03xj8b" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
